--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- VHS Noise Effect -->
+    <div class="vhs-noise"></div>
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
